# hs-snippets

./: KindMagic.hs  TypeFams.hs
ffi-cabal-builds-c/: Main.hs  ffi-cabal-builds-c.cabal
ffi-cabal-builds-c/cbits/: do_something.c  do_something.h
