Name:                ffi-cabal-builds-c
Version:             0.1
Synopsis:            Example where cabal build the C code used with the FFI
License:             BSD3
Author:              Greg Horn
Maintainer:          gregmainland@gmail.com
Build-type:          Simple
Cabal-version:       >=1.2

Extra-source-files:  cbits

Executable runTests
  Main-is:           Main.hs
  Ghc-options:       -O2
  Build-depends:     base >= 4 && < 5

  C-sources:         cbits/do_something.c
  Include-dirs:      cbits
  Includes:          do_something.h
  Install-includes:  do_something.h
  Cc-options:        -Wall -Werror
